# futtei-kokatsu

./: .gitattributes  .gitignore  CHANGELOG.ja.md  CHANGELOG.md  README.ja.md  README.md  package-lock.json  package.json  vite.config.js
src/: chart.js  i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/source/icon-mac.icon/: icon.json
src-tauri/nsis/: hooks.nsh
src-tauri/src/: lib.rs  main.rs
src/locales/: en.json  ja.json
