[package]
name = "futtei-kokatsu"
version = "1.2.0"
description = "Claude の利用量（週次・セッションの消費率）を見張る常駐ツール"
authors = ["Romly"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "futtei_kokatsu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tiny-skia = "0.11"
# トレイのバーンダウン描画で、claude が返すリセット時刻の壁時計表記(現地時間)を絶対時刻へ解釈するために使う。壁時計の年月日時分から現地タイムゾーンでの Unix 時刻を得るには現地オフセットの解決が要り、これを clock フィーチャの Local が担う。
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# ウィンドウ配置の永続化、システムバックドロップとアクセント色、自作タイトルバーのウィンドウ操作を担う共通クレート。正本は別リポジトリにあり、ここへは git subtree で内包している。ビルド番号の判定とアクセント色のレジストリ読みもこのクレートが引き受ける。
romly-tauri-common = { path = "External/romly-tauri-common" }

# トレイの小アイコン寸法を現在の DPI から測るために Win32 を直接呼ぶ。tray-icon が使う版に合わせて windows-sys のバージョン重複を避ける。
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi"] }

# macOS では透過ウィンドウ(transparent: true)の実現に private API が要るため、macos-private-api フィーチャを macOS 標的にのみ足す。Windows のビルドには含めない。tauri.macos.conf.json の app.macOSPrivateApi と対で機能する。
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }

# 二重起動を防ぎ、二個目の起動を一個目のウィンドウ復帰へ変えるプラグイン。デスクトップ専用のためモバイル標的を除いて依存させる。
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
# ログイン時の自動起動を担うプラグイン。Windows ではレジストリの Run キーを登録・解除する。同じくデスクトップ専用。
tauri-plugin-autostart = "2"

